<resources>
    <string name="app_name">HahaLearn</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="refresh_connect_device">请将%s 重新配网</string>
    <string name="refresh_connect">重新配网</string>

    <string name="config_scanning">正在搜索</string>
    <string name="accessibility_service">无障碍模式</string>
    <string name="accessibility_service_description">无障碍描述</string>
    <string name="config_gateway_searching">%1$s搜索%2$s中…</string>
    <string name="config_near_gateway">请注意将%1$s靠近网关\n若长时间未搜索到，可尝试重新操作设备</string>
    <string name="config_bind_success">绑定成功</string>
    <string name="config_bind_fail">绑定失败</string>
    <string name="config_check_cause">查看原因</string>
    <string name="config_searching_subdevice">搜索到%s及其关联设备如下：</string>

    <string name="ble_bond_status">绑定状态:%s</string>
    <string name="ble_connectable">是否可连接:%1$s</string>
    <string name="ble_service_uuids">ServiceUuids:\n%s</string>
    <string name="ble_device_uuids">DeviceUuids:\n%s</string>
    <string name="ble_unbind">解绑</string>
    <string name="ble_communicate">通信</string>

    <string name="monitor_control_start">开启UI监控</string>
    <string name="monitor_control_stop">停止UI监控</string>


    <string name="single_image">单图</string>
    <string name="multi_images">多图</string>
    <string name="choose_pictures">选择图片</string>
    <string name="take_photo">拍照</string>
    <string name="scale_type">ScaleType</string>
    <string name="background">背景</string>
    <string name="scale_value">缩放</string>

    <string name="splash_skip_seconds">跳过 %1$ds</string>
    <string name="splash_ad_label">广告</string>
    <string name="splash_ad_demo_title">点击进入百度</string>
    <string name="splash_landing_title">广告详情</string>
    <string name="splash_landing_close">关闭</string>
</resources>