<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/iv_loading"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="112dp"
        android:src="@drawable/config_smart_ic_loading_270"
        app:layout_constraintTop_toBottomOf="@+id/top_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginTop="18dp"
        android:layout_marginHorizontal="16dp"
        android:gravity="center"
        android:text="@string/config_scanning"
        app:layout_constraintTop_toBottomOf="@+id/iv_loading"/>

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="16dp"
        android:gravity="center"
        tools:text="@string/config_gateway_searching"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"/>

    <TextView
        android:id="@+id/tv_unfound_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginTop="174dp"
        android:layout_marginHorizontal="16dp"
        android:gravity="center"
        tools:text="@string/config_near_gateway"
        app:layout_constraintTop_toBottomOf="@+id/tv_subtitle"/>



    <TextView
        android:id="@+id/tv_find_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:layout_marginHorizontal="16dp"
        android:textSize="14sp"
        android:visibility="gone"
        android:textColor="#FF666666"
        android:text="@string/config_searching_subdevice"
        app:layout_constraintTop_toBottomOf="@+id/top_bar"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_subdevice"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/tv_find_tips"
        app:layout_constraintBottom_toTopOf="@+id/bt_next"/>

    <Button
        android:id="@+id/bt_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="完成"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="50dp"
        android:enabled="false"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/rv_subdevice"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>